fixed some mobile layout issues

--- a/_sass/_page.scss
+++ b/_sass/_page.scss
@@ -2,9 +2,10 @@
   width: 50%;
   margin: 0 auto;
 
-  @media (max-width: 480px) {
-    margin-left: 7px;
-    margin-right: 7px
+  @media (max-width: 768px) {
+    margin-left: 15px;
+    margin-right: 15px;
+    width: auto;
   }
 
   &__header {
